# LGCS-GUI

./: CMakeLists.txt  README.md  main.cpp  window.cpp  window.h
